fixed layout issues with open-close icon

--- a/src/index.css
+++ b/src/index.css
@@ -85,11 +85,14 @@ html, body {
 .cell-container {
   display: flex;
   justify-content: flex-start;
-  background-color:aqua;
 }
 
-.settings-bar {
+.settings-bar-container {
   display: flex;
+  justify-content: flex-end;
+  width: 100%;
+}
+.settings-bar {
 }
 .editor-title {
   display: flex;
